--- a/public/css/index.css
+++ b/public/css/index.css
@@ -100,10 +100,10 @@ body {
 }
 
 .new-todo {
+	box-shadow: none;
 	padding: 16px 60px 16px 16px;
 	border: none;
 	background: rgba(0, 0, 0, 0.003);
-	box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
 }
 
 .main {
@@ -206,9 +206,8 @@ body {
 }
 
 .todo-list li .view {
-	text-align: justify;
-  text-justify: inter-word;
-	padding: 15px;
+	word-break: break-word;
+	padding: 0 15px;
 	display: block;
 	line-height: 1.2;
 	transition: color 0.4s;
@@ -411,3 +410,22 @@ html .clear-completed:active {
 	}
   }
   
+
+pre {
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    background-color: #f8f8f8;
+    border: 1px solid #dfdfdf;
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+    padding: 0.125rem 0.3125rem 0.0625rem;
+}
+
+pre code {
+    background-color: transparent;
+    border: 0;
+    padding: 0;
+}
